--- a/app/views/notifications/_global_bar.html.erb
+++ b/app/views/notifications/_global_bar.html.erb
@@ -1,10 +1,14 @@
 <%
-  show_global_bar ||= false # Toggles the appearance of the global bar
-  title = "A Brexit deal has been agreed but needs to be ratified"
-  link_href = "/brexit"
-  link_text = "Find out what this means for you"
+  require 'date'
+
+  show_global_bar ||= true # Toggles the appearance of the global bar
+  title = "Register to vote"
+  link_href = "/register-to-vote"
+  link_text = "Register by 26 November to vote in the General Election on 12 December."
+  close_date = DateTime.new(2019,11,26,23,59,00) # DateTime after which the bar will automatically disappear, or false to unset
 -%>
-<% if show_global_bar %>
+
+<% if show_global_bar && (!close_date || DateTime.now() < close_date) %>
   <% content_for :head do %>
     <!--[if gt IE 7]><!-->
     <script>
