Import govuk_publishing_components Sass

--- a/app/assets/stylesheets/header-footer-only.scss
+++ b/app/assets/stylesheets/header-footer-only.scss
@@ -1,3 +1,6 @@
+$govuk-compatibility-govuktemplate: true;
+@import "govuk_publishing_components/all_components";
+
 /* govuk_frontend_toolkit includes */
 @import "colours";
 @import "conditionals";
