Refactor and update emergency banner
 - Old version used out of date variables and layout - new version uses GOV.UK
   Frontend / Design System variables (except for the emergency red) and layout.
 - Renamed CSS to not use the `govuk` namespace, as that should only be used by
   the Design System.
 - Refactored the CSS to use BEM method of naming things.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,5 @@
 @import "govuk_publishing_components/components/skip-link";
 @import "govuk_publishing_components/components/action-link";
 
+@import "helpers/emergency-banner";
 @import "helpers/global-bar";
