--- a/app/views/notifications/_emergency_banner.html.erb
+++ b/app/views/notifications/_emergency_banner.html.erb
@@ -1,11 +1,25 @@
-<div class="govuk-emergency-banner <%= banner.campaign_class %>" role="banner" data-nosnippet>
-  <div>
-    <h2><%= banner.heading %></h2>
-    <% if banner.short_description %>
-      <p><%= banner.short_description %></p>
-    <% end %>
-    <% if banner.link %>
-      <a href="<%= banner.link %>"><%= banner.link_text %></a>
-    <% end %>
+<%
+  campaign_class = "national-emergency"
+  heading = 'National emergency'
+  short_description = "This a test"
+  link = "https://example.com"
+  link_text = "More information"
+%>
+
+<div class="emergency-banner emergency-banner--<%= campaign_class %>" role="banner" data-nosnippet>
+  <div class="govuk-width-container">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <h2 class="emergency-banner__heading"><%= heading %></h2>
+        <% if short_description %>
+          <p class="govuk-body emergency-banner__description"><%= short_description %></p>
+        <% end %>
+        <% if link %>
+          <a href="<%= link %>" class="govuk-link emergency-banner__link"><%= link_text %></a>
+        <% end %>
+      </div>
+    </div>
   </div>
+</div>
+<div class="govuk-width-container emergency-banner__blue-bar">
 </div>
